--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#000000</color>
-    <color name="colorTopBorder">#B4E1FA</color>
+    <color name="colorTopBorder">#81F6F9</color>
     <color name="startColor">#FF0000</color>
 </resources>
